Setting up embedded Expo Snacks and inline highlighting

--- a/src/_includes/design-pattern.njk
+++ b/src/_includes/design-pattern.njk
@@ -7,3 +7,4 @@ title: Design Pattern Base
 </nav>
 <h1>{{ title }}</h1>
 {{ content | safe }}
+<script async src="https://snack.expo.dev/embed.js"></script>
