--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -9,6 +9,10 @@ title: Base Document
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>{{ title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css"/>
+    <link
+			href="https://unpkg.com/prismjs@1.20.0/themes/prism-okaidia.css"
+			rel="stylesheet"
+		/>
   </head>
   <body>
     {{ content | safe }}
