--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11,7 +11,7 @@ body {
   padding: 0.5rem 2rem 0 2rem;
 }
 
-/* Heading Styles */
+/* Headings */
 
 h1 {
   text-align: center;
@@ -25,12 +25,12 @@ h2 {
 
 /* TODO: add other heading levels */
 
-/* Paragraph Styles */
+/* Paragraphs */
 p {
   margin-top: 0rem;
 }
 
-/* Link Styles */
+/* Links */
 
 a {
   font-weight: bold;
@@ -43,4 +43,28 @@ a:visited {
 
 a:visited.no-visited-state {
   color: #000;
+}
+
+/* Embedded Expo Snacks */
+
+div[data-snack-id] {
+  overflow: hidden;
+  background: #fafafa;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+  height: 505px;
+  width: 100%;
+}
+
+/* Inline Code Highlighting */
+
+code.inline-highlight {
+  font-family:
+    "Roboto Mono", Consolas, Monaco, "Andale Mono", "Courier New", Courier,
+    monospace;
+  font-weight: normal;
+  background-color: #efefef;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+  border-radius: 0.5rem;
 }
